syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/any.proto";

package com.bybutter.sisyphus.protobuf.jackson.test;

message BaseTypeTest {
  string string_value = 1;
  int32 int32_value = 2;
  int64 int64_value = 3;
}

message NestedMessageTest {
  int32 start_value = 1;
  NestedMessage nested_message_value = 2;
  int32 end_value = 3;
  message NestedMessage {
    int32 int32_value = 1;
  }
}

message MapMessageTest {
  int32 start_value = 1;
  map<string, NestedMessage> message_map_value = 2;
  map<int32, bool> base_type_map_value = 3;
  int32 end_value = 4;
  oneof oneTest {
    int32 int_oneof_value = 5;
    string string_oneof_value = 6;
  }
  google.protobuf.Timestamp timestamp = 7;
  google.protobuf.Duration duration = 8;
  map<string, google.protobuf.Any> any_map_value = 9;
  repeated google.protobuf.Any any_list_value = 10;

  message NestedMessage {
    int32 int32_value = 1;
  }
}

message PackedTest {
  repeated int32 values = 1;
}